# engineering-design-plugin

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/plugins/: marketplace.json
.agents/plugins/engineering-design/: plugin.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.serena/: project.yml
commands/: cad.md  circuit.md  integrate.md  preview.md  schematic.md  simulate.md  spec.md
docs/: engineering-design-plugin-spec.md
examples/battery-stand/specs/: battery-stand-spec.md
examples/battery-stand/src/: battery_stand.py
examples/calibration-block/specs/: calibration-block-spec.md
examples/calibration-block/src/: calibration_block.py
examples/inverting-amplifier/specs/: inverting-amplifier-spec.md
examples/inverting-amplifier/src/: circuit.py
examples/iot-device/specs/: iot-device-integrated-spec.md
examples/iot-device/src/: circuit.py  enclosure.py
hooks/: hooks.json
hooks/scripts/: validate-code.sh
scripts/: cadquery_runner.py  install_codex_plugin.sh  integration_checker.py  link_codex_skills.sh  preview_generator.py  pyspice_sim.py  schemdraw_render.py  skidl_runner.py  uninstall_codex_plugin.sh
skills/circuit-design/: SKILL.md
skills/integration/: SKILL.md
skills/mechanical-cad/: SKILL.md
skills/spec-writing/: SKILL.md
templates/circuit/: opamp_amplifier.py  rc_filter.py  voltage_divider.py
templates/mechanical/: box_with_holes.py  bracket.py  enclosure_with_pcb.py  shaft.py
templates/spec/: circuit-spec.md  integrated-spec.md  mechanical-spec.md
(+42 files in other folders)
